# calling-nemo

./: .env.example  .gitignore  Justfile  README.md  agent_gemini_live.py  docker-compose.yml  pyproject.toml
docs/: README-nemotron-january-2026.md  dual-agent-architecture.md  tts-comparison.md
nemotron-january-2026/: Dockerfile.unified  README.md  VOICE_AGENT_IDEAS.md
pipecat_bots/: bot_dual_interleaved_streaming.py  bot_gemini_tools.py  tools.py
tests/: test_pipeline_integration.py  test_tool_calling.py  test_tools.py
